--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "npm-run-all": "4.1.5",
     "parcel": "2.4.0",
     "rimraf": "3.0.2"
+  },
+  "dependencies": {
+    "keen-slider": "^6.6.5"
   }
 }
