--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "rimraf": "3.0.2"
   },
   "dependencies": {
-    "keen-slider": "6.6.5"
+    "keen-slider": "6.6.4",
+    "tiny-slider": "2.9.4"
   }
 }
