--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "devDependencies": {
     "npm-run-all": "4.1.5",
     "parcel": "2.4.0",
-    "rimraf": "3.0.2",
-    "sharp": "^0.29.3"
+    "rimraf": "3.0.2"
   },
   "dependencies": {
     "tiny-slider": "2.9.4"
